--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <tbody>
  <tr>
   <td style="font-size: 10pt; font-family: Arial, sans-serif;; border-right: 3px solid; border-right-color: #2196f3; width:180px; padding-right: 10px; vertical-align: top;" valign="top">  
-   <img  src="master/photo.png" alt="photograph" width="120" border="0" style="border:0; height:auto; width:120px"/> 
+   <img  src="photo.png" alt="photograph" width="120" border="0" style="border:0; height:auto; width:120px"/> 
 	<p style="margin-top:32px; margin-bottom:0; line-height:1.0">
        <strong><span style="font-size: 12pt; font-family: Arial, sans-serif;; color:#2196f3;">Alex Longson<br></span></strong>
        <span  style="font-family: Arial, sans-serif;; font-size:9pt; color:#000000;">Co-Director</span>
