--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 <tbody>
  <tr>
   <td style="font-size: 10pt; font-family: Arial, sans-serif;; border-right: 3px solid; border-right-color: #2196f3; width:180px; padding-right: 10px; vertical-align: top;" valign="top">  
-   <img  src="master/photo.png" alt="photograph" width="120" border="0" style="border:0; height:auto; width:120px"/> 
-	<p style="margin-top:32px; margin-bottom:0; line-height:1.0">
-       <strong><span style="font-size: 12pt; font-family: Arial, sans-serif;; color:#2196f3;">Alex Longson<br></span></strong>
-       <span  style="font-family: Arial, sans-serif;; font-size:9pt; color:#000000;">Co-Director</span>
+	<p style="margin-top:15px; margin-bottom:0; line-height:1.0">
+       <strong><span style="font-size: 13pt; font-family: Arial, sans-serif;; color:#2196f3;">Alexander Longson<br></span></strong>
+       <span  style="font-family: Arial, sans-serif;; font-size:9pt; color:#000000;">Director</span>
+       <br>
+       <br> 
+       <a href="mailto:alex@ukchess.co.uk?subject=Hi there" target="_blank" rel="noopener" style="text-decoration:none;"><span style="color: #000000;"><strong>Email: </strong></span><span style="font-size: 9pt; font-family: Arial, sans-serif;; color:#000000;"> alex@ukchess.co.uk</span></a>
+
+       <br>
+       <br>
+       <a href="https://www.facebook.com/DelanceyUKSchoolsChessChallenge" target="_blank" rel="noopener"><img border="0" width="22" src="fb.png" alt="facebook icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://twitter.com/delancey_ukcc" target="_blank" rel="noopener"><img border="0" width="22" src="tt.png" alt="twitter icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://www.youtube.com/channel/UCdwqdN3reUPnWOzAMoJRx-A" target="_blank" rel="noopener"><img border="0" width="22" src="yt.png" alt="youtube icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://www.instagram.com/ukchesschallenge/" target="_blank" rel="noopener"><img border="0" width="22" src="it.png" alt="instagram icon" style="border:0; height:22px; width:22px"></a>
 	</p>  
   </td>
   
@@ -20,21 +26,12 @@
   <table cellpadding="0" cellspacing="0" border="0">
   <tbody>
     <tr>
-      <td style="font-size: 10pt; color:#444444; font-family: Arial, sans-serif;; padding-bottom: 5px; padding-left: 30px; vertical-align: top; line-height:1.3" valign="top">
-		<span style="color: #000000;"><strong>M</strong></span><span style="font-size: 9pt; font-family: Arial, sans-serif;; color:#000000;"> {mobile}<br></span>
-        <span style="color: #000000;"><strong>P</strong></span><span style="font-size: 9pt; font-family: Arial, sans-serif;; color:#000000;"> {phone}<br></span>
-        <span style="color: #000000;"><strong>E</strong></span><span style="font-size: 9pt; font-family: Arial, sans-serif;; color:#000000;"> alex@ukchess.co.uk</span>
-      </td>
-    </tr>  
-    <tr>
       <td style="font-size: 10pt; color:#0079ac; font-family: Arial, sans-serif;; padding-bottom: 5px; padding-left: 30px; vertical-align: top; line-height:1.3" valign="top">
-       <strong style="font-family: Arial, sans-serif;; font-size:9pt; color:#000000;" >UK Chess Challenge</strong>  
-
-			<br>
-			<span  style="font-size: 10pt; font-family: Arial, sans-serif;; color: #000000;">3rd Floor, Sinclair House, 11 Station Rd, Cheadle Hulme, Cheadle<br /></span>
-			<span  style="font-size: 10pt; font-family: Arial, sans-serif;; color: #000000;">SK8 5BB, United Kingdom</span>
-			
-      </td>
+        <strong style="font-family: Arial, sans-serif;; font-size:9pt; color:#000000;" >UK Chess Challenge</strong>  
+			  <br>
+			  <span  style="font-size: 10pt; font-family: Arial, sans-serif;; color: #000000;">3rd Floor, Sinclair House, 11 Station Rd, Cheadle Hulme, Cheadle<br /></span>
+			  <span  style="font-size: 10pt; font-family: Arial, sans-serif;; color: #000000;">SK8 5BB, United Kingdom</span>
+			</td>
     </tr> 
 
 
@@ -45,7 +42,6 @@
     </tr>
     <tr >
       <td style="font-size: 10pt; font-family: Arial, sans-serif;; padding-top: 15px; padding-left: 30px; vertical-align: bottom;" valign="top">
-        <a href="https://www.facebook.com/DelanceyUKSchoolsChessChallenge" target="_blank" rel="noopener"><img border="0" width="22" src="fb.png" alt="facebook icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://twitter.com/delancey_ukcc" target="_blank" rel="noopener"><img border="0" width="22" src="tt.png" alt="twitter icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://www.youtube.com/channel/UCdwqdN3reUPnWOzAMoJRx-A" target="_blank" rel="noopener"><img border="0" width="22" src="yt.png" alt="youtube icon" style="border:0; height:22px; width:22px"></a>&nbsp;<a href="https://www.instagram.com/ukchesschallenge/" target="_blank" rel="noopener"><img border="0" width="22" src="it.png" alt="instagram icon" style="border:0; height:22px; width:22px"></a>
       </td>
      </tr>
     </td>
